feat(patients): self-review of #653 — Sonar round 1
Sonar Cloud on e34a7b88.

PatientRecordPdfService.java:93 — java:S3776 (cognitive complexity 29 > 15):
- write() laid out every section in one method.
- Split into writeIdentity, writeStoryboard and writeChart; write() keeps the
  page lifecycle and the held-rows footer.

PatientRecordPdfService.java:99 — java:S8688 (now() without a zone):
- The print time is stamped in UTC and says so on the page.

PatientRecordPdfServiceTest.java:112 — java:S6204:
- Stream.toList() instead of collect(Collectors.toList()).

Suite green, coverage floor met; PatientRecordPdfServiceTest 4/4.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>